fix dropdown hidden by toolbar

--- a/src/components/app-bar/app-bar.scss
+++ b/src/components/app-bar/app-bar.scss
@@ -5,6 +5,6 @@
 
   header {
     height: inherit;
-    z-index: 1;
+    z-index: 2;
   }
 }
